# gpx-tracks-3d

./: .gitignore  CLAUDE.md  README.md  auto_cut.py  fix_mesh.py  gpx_coordinate_transforms.py  main.py  plotting.py  pyproject.toml
data/: Afternoon hike at .gpx
data/boulder_three_peaks/: 10m_-105.29_39.97.tif  boulder_three_peaks.gpx  config.json  logfile.txt
data/buck/: config.json  tetons_buck.gpx
data/cascades/: config.json  devils_dome.gpx
data/elbert_jun_2025/: 10m_-106.44_39.12_tile_1_1.STL  Highest_point_in_CO_.gpx  config.json
data/jess_boulder_5_peaks/: 10m_-105.30_39.99.tif  Welcome_to_Boulder_Anniversary_Edition_.gpx  config.json  jess_boulder_5_peaks_f360.csv  logfile.txt
data/jess_pikes_mthon_2025/: Wow_I_think_I_might_be_doing_this_the_rest_of_my_life.gpx  config.json
data/loyalsock/: 10m_-76.53_41.48.tif  Loyalsock_Link_Trail_Overnight.gpx  config.json  logfile.txt  loyalsock_f360.csv
data/maroon/: Maroon_bells_traverse.gpx  Pyramid_peak_.gpx  config.json
data/mr_dlp_ironman/: Vineman_2016_Bike.gpx  Vineman_2016_Run.gpx  config.json
data/olympus_michelle/: 10m_-111.77_40.65.tif  config.json  logfile.txt  olympus_michelle.gpx  olympus_michelle_f360.csv
data/pikes_peak/: 10m_-105.07_38.85.tif  config.json  logfile.txt  pikes.gpx  pikes_peak_f360.csv
data/sawtooth/: Bierstadt_sawtooth_blue_sky.gpx  config.json
data/south_arapaho/: 10m_-105.65_40.01.tif  10m_-105.65_40.01_tile_1_1.STL  config.json  logfile.txt  south_arapaho_autocut.STL
data/south_arapaho_2/: 10m_-105.64_40.02.tif  10m_-105.64_40.02_tile_1_1.STL  South_Arapaho.gpx  (+3 more)
(+24 files in other folders)
