[project]
name = "gpxtracks3d"
version = "0.1.0"
description = "Carve a GPX track into an STL terrain model as a printable groove."
requires-python = ">=3.10"
dependencies = [
    "gpxpy>=1.6.2",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "numpy-stl>=4.0.0",
    "pymeshfix>=0.18.1",
    "pyproj>=3.7.1",
    "pyvista>=0.48.4",
    "requests>=2.34.2",
    "scipy>=1.15.3",
]
